fixed details font spacing

--- a/css/style.css
+++ b/css/style.css
@@ -19,9 +19,7 @@ body{
 .not-found{
     display: none;
 }
-.features p{
-    line-height: 12px;
-}
+
 
 .loading{
     width: 45vh;
